--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 			<artifactId>glassfish-jstl</artifactId>
 			</dependency>
 		
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>bootstrap</artifactId>
 			<version>5.2.3</version>
@@ -52,7 +52,7 @@
 			<groupId>org.webjars</groupId>
 			<artifactId>jquery</artifactId>
 			<version>3.6.4</version>
-		</dependency> -->
+		</dependency>
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
