--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
 		</dependency>
 		
 		<dependency>
+		    <groupId>org.webjars</groupId>
+		    <artifactId>bootstrap-datetimepicker</artifactId>
+		    <version>2.3.8</version>
+ 		</dependency>
+		
+		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>jquery</artifactId>
 			<version>3.6.4</version>
